mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_match_missing_wildcard.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Non-exhaustive match: type 'int' requires a wildcard '_' pattern
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_match_missing_wildcard.mux:4:11
   |
 4 |     match x {
   |           ^
